--- a/environment.yml
+++ b/environment.yml
@@ -19,5 +19,7 @@ dependencies:
 - numpy>=1.20.1
 - matplotlib>=3.4.3
 - tensorboardX>=2.4.0
+- tensorboard>=2.8.0
 - xarray>=0.20.2
 - netcdf4>=1.5.8
+- xesmf>=0.6.2
