--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ torchvision>=0.2.1
 numpy>=1.20.1
 matplotlib>=3.4.3
 tensorboardX>=2.4.0
+tensorboard>=2.8.0
 xarray>=0.20.2
 netcdf4>=1.5.8
+xesmf>=0.6.2
 # climatereconstructionAI>=0.1.0
 climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@clint#egg=climatereconstructionAI
 # climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@c24627948dcac86987b5f57a484c6e6439515cf5#egg=climatereconstructionAI
