--- a/duck/default.cfg
+++ b/duck/default.cfg
@@ -13,7 +13,7 @@ allowedinputpaths = /
 maxsingleinputsize = 200mb
 maxprocesses = -1
 parallelprocesses = -1
-cleantempdir = false
+cleantempdir = true
 
 [logging]
 level = INFO
