use pangeo-xesmf

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ tensorboardX>=2.4.0
 tensorboard>=2.8.0
 xarray>=0.20.2
 netcdf4>=1.5.8
-xesmf>=0.6.2
+pangeo-xesmf>=0.6.2
 cartopy>=0.20.2
 numba>=0.55.1
 # climatereconstructionAI>=0.1.0
