--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         submodules: recursive
     - name: Install packages
       run: |
-        sudo apt-get -y install pandoc
+        sudo apt-get -y install pandoc proj
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
