--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ tensorboard>=2.8.0
 xarray>=0.20.2
 netcdf4>=1.5.8
 pangeo-xesmf>=0.6.2
-cartopy<0.20
+cartopy==0.19.0.post1
 numba>=0.55.1
 # climatereconstructionAI>=0.1.0
 climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@clint#egg=climatereconstructionAI
