--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,13 @@ name: build ⚙️
 on: [ push, pull_request ]
 
 jobs:
-  build:
+  pypi:
 
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7]
+        allowed_to_fail: true
     steps:
     - name: Checkout repository and submodules
       uses: actions/checkout@v2
@@ -17,7 +18,7 @@ jobs:
         submodules: recursive
     - name: Install packages
       run: |
-        sudo apt-get -y install pandoc
+        sudo apt-get -y install pandoc libproj-dev proj-data proj-bin libgeos-dev
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -30,9 +31,36 @@ jobs:
         if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
     - name: Test with pytest ⚙️
       run: make test
-    - name: Lint with flake8 ⚙️
-      run: make lint
-      if: matrix.python-version == 3.7
+    # - name: Lint with flake8 ⚙️
+    #   run: make lint
+    #   if: matrix.python-version == 3.7
     # - name: Build docs 🏗️
     #   run: make docs
     #   if: matrix.python-version == 3.7
+
+conda:
+  runs-on: ubuntu-latest
+  strategy:
+    matrix:
+      python-version: [3.7]
+  steps:
+    - uses: actions/checkout@v2
+    - name: Setup conda with Python ${{ matrix.python-version }}
+      uses: s-weigand/setup-conda@v1
+      with:
+        update-conda: true
+        python-version: ${{ matrix.python-version }}
+        conda-channels: conda-forge, defaults
+    - name: Conda env configuration
+      run: |
+          conda env create -f environment.yml
+          source activate duck
+          pip install -e ".[dev]"
+    - name: Test with conda
+      run: |
+          source activate duck
+          pytest tests
+      continue-on-error: false
+    - name: Lint with flake8 ⚙️
+      run: make lint
+      if: matrix.python-version == 3.7
