--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ tensorboardX>=2.4.0
 tensorboard>=2.8.0
 xarray>=0.20.2
 netcdf4>=1.5.8
-xesmf>=0.6.2
-cartopy
+pangeo-xesmf>=0.6.2
+cartopy>=0.20
+numba>=0.55.1
 # climatereconstructionAI>=0.1.0
 climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@clint#egg=climatereconstructionAI
 # climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@c24627948dcac86987b5f57a484c6e6439515cf5#egg=climatereconstructionAI
