--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,8 @@ tag = True
 description-file = README.rst
 
 [bumpversion:file:duck/__version__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
-
-[bumpversion:file:docs/source/conf.py]
-parse = version|release = {current_version}
-replace = {new_version}
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:Dockerfile]
 search = Version="{current_version}"
