--- a/duck/default.cfg
+++ b/duck/default.cfg
@@ -1,6 +1,6 @@
 [metadata:main]
 identification_title = Duck
-identification_abstract = A Demo Web Service for Clint AI.
+identification_abstract = A Demo Web Service for CRAI.
 identification_keywords = PyWPS, WPS, OGC, processing, birdhouse, duck, demo
 identification_keywords_type = theme
 provider_name = Duck
