Update process name

--- a/duck/default.cfg
+++ b/duck/default.cfg
@@ -1,9 +1,9 @@
 [metadata:main]
-identification_title = Duck
+identification_title = CRAI
 identification_abstract = A Demo Web Service for CRAI.
-identification_keywords = PyWPS, WPS, OGC, processing, birdhouse, duck, demo
+identification_keywords = PyWPS, WPS, OGC, processing, birdhouse, CRAI, demo
 identification_keywords_type = theme
-provider_name = Duck
+provider_name = CRAI
 provider_url=https://duck.readthedocs.org/en/latest/
 
 [server]
