--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,4 @@ psutil
 pywps>=4.5.1,<4.6
 # CRAI
 # climatereconstructionAI>=0.1.0
-climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@clint#egg=climatereconstructionAI
-# climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@c24627948dcac86987b5f57a484c6e6439515cf5#egg=climatereconstructionAI
+climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@main#egg=climatereconstructionAI
