--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 - pytorch
 dependencies:
 - pip
-- python>=3.7,<3.8
+- python>=3.7
 - pywps>=4.5.1,<4.6
 - jinja2
 - click
@@ -14,15 +14,17 @@ dependencies:
 - requests
 - flake8
 # clint ai
-- pytorch>=1.8.0
-- tqdm>=4.59.0
-- torchvision>=0.2.1
-- numpy>=1.20.1
-- matplotlib>=3.4.3
-- tensorboardX>=2.4.0
-- tensorboard>=2.8.0
-- xarray>=0.20.2
+- pytorch>=1.11.0
+- tqdm>=4.64.0
+- torchvision>=0.12.0
+- numpy>=1.21.6
+- matplotlib>=3.5.1
+- tensorboardX>=2.5
+- tensorboard>=2.9.0
+- xarray>=2022.3.0
+- dask>=2022.7.0
 - netcdf4>=1.5.8
+- setuptools==59.5.0
 - xesmf>=0.6.2
 # plot
 - cartopy>=0.20.2
