--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ psutil
 pywps>=4.5.1,<4.6
 # CRAI
 # climatereconstructionAI>=0.1.0
+craimodels @ git+https://github.com/climateintelligence/craimodels@main#egg=craimodels
 climatereconstructionAI @ git+https://github.com/FREVA-CLINT/climatereconstructionAI@clint#egg=climatereconstructionAI
