working on provenance db config

--- a/duck/default.cfg
+++ b/duck/default.cfg
@@ -19,3 +19,6 @@ cleantempdir = false
 level = INFO
 file = duck.log
 format = %(asctime)s] [%(levelname)s] line=%(lineno)s module=%(module)s %(message)s
+
+[provenance]
+db_url = sqlite:////tmp/provenance.sqlite
